[package]
name = "ms_teams_runner"
version = "0.1.0"
edition = "2021"
authors = ["Alexey Boreyko"]
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
winapi = { version = "0.3", features = ["winbase", "winuser", "processenv", "shellapi", "errhandlingapi"] }
shellexpand = "1.1.0"

[profile.release]
opt-level = 3
lto = true