[package]
name = "ms_teams_runner"
version = "0.1.0"
edition = "2021"
authors = ["Alexey Boreyko"]
build = "build.rs"

[dependencies]
walkdir = "2.3.2"
winapi = { version = "0.3", features = ["winbase", "winuser", "errhandlingapi"] }
shellexpand = "3.0.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
lto = true