[package]
name = "ms_teams_runner"
version = "0.1.0"
edition = "2021"
authors = ["Alexey Boreyko"]
build = "build.rs"

[dependencies]
walkdir = "2.4.0"
shellexpand = "3.1.0"
winapi = { version = "0.3", features = ["winbase", "winuser", "errhandlingapi"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
lto = true